<resources>
    <string name="app_name">DashIt</string>
    <string name="timestampUrl">http://www.originstamp.org/api/stamps/</string>
    <string name="timestampToken">a876e0bbb8894e8c8eadc5b3a19adff7</string>
    <string name="google_app_id">481421819080</string>
    <string name="verifyHashUrl">https://blockchain.info/</string>

    <string name="title_activity_main">Recording</string>
    <string name="title_activity_verify_files">Verify Files</string>

    <string name="menu_context_delete">Delete</string>
    <string name="menu_action_history_verify">History</string>
    <string name="menu_action_settings">Settings</string>

    <string name="activity_history_verify_long_press">Long press an item to delete</string>

    <string name="activity_home_button_text">Start Recording</string>
    <string name="activity_home_dashcam_instructions">Please keep the phone on Dash Cam Holder</string>
    <string name="activity_home_startRecording_description">Tap to start recording</string>

    <string name="activity_main_status_description">Your current driving status that is measured by the sensors.</string>
    <string name="activity_main_current_status_safe">Status: Recording in Progress</string>
    <string name="activity_main_current_status_collision">Status: Collision</string>
    <string name="activity_main_stopButton_content_description">Stop Video Recording</string>
    <string name="activity_main_status_icon_description">Status</string>

    <string name="activity_verify_files_fileName_placeholder">File Name</string>
    <string name="activity_verify_files_directoryName_placeholder">Directory Name</string>
    <string name="activity_verify_files_arrow_icon_description">Process Flow Arrow</string>
    <string name="activity_verify_files_hash_icon_description">Hash Value Icon</string>
    <string name="activity_verify_files_bitcoin_icon_description">Bitcoin Cloud Icon</string>
    <string name="activity_verify_files_hashValue_placeholder">Hash Value</string>
    <string name="activity_verify_files_hashSubmission">Hash submitted to Bitcoin Blockchain</string>
    <string name="activity_verify_files_hashNoSubmission">Hash has NOT been submitted to Bitcoin Blockchain</string>
    <string name="activity_verify_files_hashNotCorrect">Computed hash does not match the saved hash</string>
    <string name="activity_verify_files_transactionHash">Transaction Hash</string>
    <string name="activity_verify_files_verifyButton">Verify</string>

    <string name="list_item_status_icon_description">Status of submitted hash</string>

    <string name="instruction_storage_device_problem">Storage device not available.</string>
    <string name="instruction_hash_sent_successful">Hash sent successfully!</string>
    <string name="instruction_hash_sent_unsuccessful">Problems while sending hash. Please check you internet connection.</string>
    <string name="instruction_sms_sent_successful">SMS sent successfully!</string>
    <string name="instruction_sms_sent_unsuccessful">Problem while sending SMS! Please contact Emergency services.</string>
    <string name="instruction_internet_unavailable">Please connect to Internet.</string>
    <string name="instruction_application_switch_possible">You can switch between applications.</string>
    <string name="instruction_transactionHash_copied">Transaction hash copied!</string>

    <string name="dialog_title">Please confirm</string>
    <string name="dialog_message">Was this a collision?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="sms_message_contact">Your contact: </string>
    <string name="sms_message_help">\n needs urgent help!</string>
    <string name="sms_message_your_phone_number">\n Phone number: </string>
    <string name="sms_message_location">\n Current location: </string>

    <string name="preference_sms_title">Send SMS</string>
    <string name="preference_sms_summary">Notify Emergency Contact when collision is confirmed.</string>
    <string name="preference_name_title">Name</string>
    <string name="preference_name_dialogMessage">Max length: 25</string>
    <string name="preference_name_summary_set">Your name: </string>
    <string name="preference_name_summary_not_set">Your name: Not set</string>
    <string name="preference_phone_title">Phone Number</string>
    <string name="preference_phone_dialogMessage">Please add country code. Max length: 15</string>
    <string name="preference_phone_summary_set">Your phone number: </string>
    <string name="preference_phone_summary_not_set">Your phone number: Not set</string>
    <string name="preference_emergency_title">Emergency Contact</string>
    <string name="preference_emergency_dialogMessage">Please add country code. Max length: 15</string>
    <string name="preference_emergency_summary_set">Your emergency contact: </string>
    <string name="preference_emergency_summary_not_set">Your emergency contact: Not set</string>
</resources>
