<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="false"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Recording -->

            <!-- Status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/grey"
                android:elevation="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:elevation="0dp"
                            android:text="@string/activity_main_current_status_safe"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="@dimen/settings_labels_fontsize_item"
                            android:id="@+id/current_status" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/activity_main_status_description"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/settings_labels_fontsize_item_description"
                            android:id="@+id/status_description" />


                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="4"
                        android:elevation="0dp"
                        android:gravity="center|end">

                        <ImageView
                            android:id="@+id/status"
                            android:contentDescription="@string/status"
                            android:src="@drawable/green_dot"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/middleSurface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:orientation="vertical">

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/stop_recording"
        android:layout_gravity="bottom|center"
        android:background="@drawable/circle"
        android:backgroundTint="@android:color/holo_red_dark"
        app:srcCompat="@drawable/square"
        android:layout_marginBottom="2dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/activity_main_stopButton_content_description" />


</android.support.design.widget.CoordinatorLayout>